<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <ScrollView
            android:id="@+id/demoScroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/consoleText"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/strEdtMessage"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"/>

        <LinearLayout
            android:id="@+id/linerButtonRowOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_play_arrow"
                android:text="@string/btnNameOne"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNameUp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_arrow_upward"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/btnNameSet"
                android:drawableLeft="@drawable/ic_sharp_play_circle_outline"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerButtonRowTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/btnNameTwo"
                android:drawableLeft="@drawable/ic_baseline_stop"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/btnNameDown"
                android:drawableLeft="@drawable/ic_baseline_arrow_downward"/>
            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/btnNameReset"
                android:drawableLeft="@drawable/ic_sharp_repeat"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>